// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package spee.v1;

option go_package = "go.chromium.org/luci/provenance/api/speepb/v1;speepb";

// NetworkActivityLog records a network request made by the build.
message NetworkActivityLog {
  repeated HttpRequest http_requests = 1;
  message HttpRequest {
    optional string method = 1;
    optional string scheme = 2;
    optional string host = 3;
    optional string path = 4;
  }
  repeated RawRequest raw_requests = 2;
  message RawRequest {
    optional string protocol = 1;
    optional string address = 2;
  }
  repeated PackageInstall package_installs = 3;
  message PackageInstall {
    optional string ecosystem = 1;
    optional string name = 2;
    optional string version = 3;
    optional string download_uri = 4;
  }
}